fixed #top-button position on mobile

--- a/_sass/_sm.scss
+++ b/_sass/_sm.scss
@@ -105,8 +105,8 @@
 
   #top-button {
     position: fixed;
-    bottom: 0em;
-    right: 0.1em;
+    bottom: -0.3em;
+    right: 0.3em;
     text-decoration: none;
     font-size: 40px;
     color: $pinkish-grey;
