--- a/_sass/_xs.scss
+++ b/_sass/_xs.scss
@@ -110,8 +110,8 @@
     height: 2em;
     width: 1em;
     position: fixed;
-    bottom: 0em;
-    right: 0.1em;
+    bottom: -0.3em;
+    right: 0.3em;
     text-decoration: none;
     font-size: 40px;
     color: $moo-xoo-green;
